[gd_scene load_steps=2 format=3 uid="uid://bcve0ydl22vlc"]

[ext_resource type="Script" path="res://Scripts/Level/Observer.gd" id="1_8tf5n"]

[node name="Pause" type="Node2D"]
script = ExtResource("1_8tf5n")

[node name="Menu" type="Node" parent="."]
process_mode = 2

[node name="Pause" type="CanvasModulate" parent="Menu"]
visible = false
color = Color(1, 1, 1, 0.623529)

[node name="Return" type="Button" parent="Menu"]
visible = false
offset_left = 383.0
offset_top = 89.0
offset_right = 598.0
offset_bottom = 162.0
text = "Return"

[node name="Retry" type="Button" parent="Menu"]
visible = false
offset_left = 383.0
offset_top = 174.0
offset_right = 598.0
offset_bottom = 247.0
text = "Retry from start
"

[node name="RetryFromCheckpoint" type="Button" parent="Menu"]
visible = false
offset_left = 382.0
offset_top = 258.0
offset_right = 597.0
offset_bottom = 331.0
text = "Retry from checkpoint
"

[node name="PauseMainMenu" type="Button" parent="Menu"]
visible = false
offset_left = 381.0
offset_top = 342.0
offset_right = 596.0
offset_bottom = 415.0
text = "Main menu"

[node name="Game over" type="Node" parent="."]

[node name="GameOver" type="CanvasModulate" parent="Game over"]
visible = false
position = Vector2(466, 328)
color = Color(1, 1, 1, 0.54902)

[node name="Retry" type="Button" parent="Game over"]
visible = false
offset_left = 383.0
offset_top = 174.0
offset_right = 598.0
offset_bottom = 247.0
text = "Retry from start"

[node name="MainMenu" type="Button" parent="Game over"]
visible = false
offset_left = 383.0
offset_top = 89.0
offset_right = 598.0
offset_bottom = 162.0
text = "Main menu"

[node name="RetryFromCheckpoint" type="Button" parent="Game over"]
visible = false
offset_left = 382.0
offset_top = 258.0
offset_right = 597.0
offset_bottom = 331.0
text = "Retry from checkpoint
"

[node name="Quit" type="Button" parent="Game over"]
visible = false
offset_left = 381.0
offset_top = 343.0
offset_right = 596.0
offset_bottom = 416.0
text = "Quit"

[connection signal="pressed" from="Menu/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Menu/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Menu/RetryFromCheckpoint" to="." method="_on_retry_from_checkpoint_pressed"]
[connection signal="pressed" from="Menu/PauseMainMenu" to="." method="_on_pause_main_menu_pressed"]
[connection signal="pressed" from="Game over/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Game over/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Game over/RetryFromCheckpoint" to="." method="_on_retry_from_checkpoint_pressed"]
[connection signal="pressed" from="Game over/Quit" to="." method="_on_quit_pressed"]
